Doctor exam: add lab results & history view
Add support for displaying lab results and recent examination history in the doctor exam flow. New model classes ExamLabItem and ExaminationHistoryItem are added; DoctorDAO gains getLabResultsByAppointment and getExaminationHistoryByAppointment and now includes patient_id in queue queries. DoctorQueueItem now stores patientId. DoctorExamServlet was refactored to improve validation, error handling, start-exam transition, and to load/publish labResults and historyList to the JSP. UI/CSS updates in exam.jsp and exam.css to render errors, lab items, prescription UI and history table, plus helper JS to add prescription rows.